--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,12 @@ script:
     --workdir /root/irro
     miindy/irro-ci:latest
     /root/irro/ci/ci.sh
-  - rm docs/_build/.gitignore # Otherwise gh-pages won't be properly deployed
-  - touch docs/_build/.nojekyll # docs are not based on Jekyll
 deploy:
   provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: false
-  local-dir: docs/_build/
+  local-dir: html/
   fqdn: irro.mgn.cz
   on:
     branch: master
