Switch from serial to serialport crate
Serial has been abandoned for ~2 years but serialport seems to be
actively developed. The other library is extremely similar to the old
one so it has likely evolved from it.

This upgrade will make testing easier because the new library supports
creation of pair() of ports.

--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -7,6 +7,9 @@ RUN apt-get update \
         curl \
         python3 \
         python3-pip \
+        # This two are needed by serialport Rust dependency.
+        pkg-config \
+        libudev-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
