--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Martin Indra <martin.indra@mgn.cz>"]
 edition = "2018"
 
 [dependencies]
-serial = "0.4.0"
+serialport = "3.2.0"
 
 [lib]
 name = "irro"
