Travis CI: build Rust artifact
Note that serialport dependency is build without default features, it
has only one default feature and its libudev but that library cannot be
build for Raspberry (or at least I can't quickly fix the build). Serial
port enumeration is not used anyways so as a side effect there will be
one less unused dependency.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,24 @@ script:
     docker run
     --volume `pwd`:/root/irro
     --workdir /root/irro
+    --env TRAVIS_COMMIT=$TRAVIS_COMMIT
     miindy/irro-ci:latest
     /root/irro/ci/ci.sh
 deploy:
-  provider: pages
-  skip-cleanup: true
-  github-token: $GITHUB_TOKEN
-  keep-history: false
-  local-dir: html/
-  fqdn: irro.mgn.cz
-  on:
-    branch: master
+  - provider: pages
+    skip-cleanup: true
+    github-token: $GITHUB_TOKEN
+    keep-history: false
+    local-dir: html/
+    fqdn: irro.mgn.cz
+    on:
+      branch: master
+
+  - provider: gcs
+    access_key_id: $GCS_ID
+    secret_access_key: $GCS_KEY
+    bucket: "ci.gs.irro.mgn.cz"
+    skip_cleanup: true
+    local-dir: artifacts/
+    on:
+      branch: master
