--- a/ci/Dockerfile
+++ b/ci/Dockerfile
@@ -1,6 +1,8 @@
 FROM ubuntu:18.04
 LABEL maintainer="Martin Indra <martin.indra@mgn.cz>"
 
+ADD ci/sources.list /etc/apt/sources.list
+RUN dpkg --add-architecture armhf
 RUN apt-get update \
         && apt-get install -y \
         build-essential \
@@ -8,6 +10,9 @@ RUN apt-get update \
         python3 \
         python3-pip \
         gcc-arm-linux-gnueabihf \
+        pkg-config \
+        libsystemd-dev \
+        libsystemd-dev:armhf \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
