--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,10 +7,15 @@ edition = "2018"
 [dependencies]
 actix-web = "1.0.3"
 serde = "1.0.94"
+systemd = "0.4"
 
 [dependencies.serialport]
 version = "3.3.0"
 default-features = false
+
+[dependencies.log]
+version = "0.4.6"
+features = ["max_level_debug", "release_max_level_info"]
 
 [lib]
 name = "irro"
