--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -9,6 +9,7 @@ actix-web = "1.0.3"
 serde = "1.0.94"
 systemd = "0.4"
 clap = "2.33.0"
+lazy_static = "1.3.0"
 
 [dependencies.serialport]
 version = "3.3.0"
