--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ serde = "1.0.94"
 systemd = "0.4"
 clap = "2.33.0"
 lazy_static = "1.3.0"
+rscam = "0.5.5"
 
 [dependencies.serialport]
 version = "3.3.0"
