--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.40'
-    ext.coroutine_version = '1.3.0-M2'
+    ext {
+        kotlin_version = '1.3.40'
+        coroutine_version = '1.3.0-M2'
+        version_moshi = '1.8.0'
+        version_retrofit = '2.6.0'
+        version_retrofit_coroutines_adapter = "0.9.2"
+    }
 
     repositories {
         google()
