--- a/raspberry/irro.service
+++ b/raspberry/irro.service
@@ -5,7 +5,7 @@ Documentation=https://irro.cz/
 [Service]
 Type=simple
 ExecStartPre=/home/irro/irro-cli update --path /home/irro/irro-cli
-ExecStart=/home/irro/irro-cli start
+ExecStart=/home/irro/irro-cli start --device /dev/ttyACM0
 Restart=on-failure
 RestartSec=5
 User=irro
