Irroctl: implement API client

--- a/irroctl/Cargo.toml
+++ b/irroctl/Cargo.toml
@@ -5,8 +5,12 @@ authors = ["Martin Indra <martin.indra@mgn.cz>"]
 edition = "2018"
 
 [dependencies]
+reqwest = "0.9.18"
 log = "0.4.7"
 simplelog = "0.6.0"
+
+[dev-dependencies]
+mockito = "0.18.0"
 
 [lib]
 name = "libirroctl"
