--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         version_moshi = '1.8.0'
         version_retrofit = '2.6.0'
         version_retrofit_coroutines_adapter = "0.9.2"
+        navigation_version = '1.0.0-rc02'
     }
 
     repositories {
